# claude-code-python

./: .env.example  .gitignore  README.md  README_en.md  __init__.py  __main__.py  cli.py  config.py  pyproject.toml  query.py  requirements.txt  run.bat  run.py
api/: __init__.py  client.py  types.py
claude_code/: cli.py  config.py  run.py
claude_code/commands/: base.py
claude_code/mcp/: __init__.py
claude_code/session/: __init__.py  manager.py
claude_code/tools/: base.py  bash.py
claude_code/tui/: __init__.py
commands/: __init__.py  commit.py  review.py
mcp/: client.py  types.py
session/: storage.py
tools/: __init__.py  edit.py  glob.py  grep.py  read.py  registry.py  write.py
tui/: app.py
utils/: logging.py
